--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,18 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "noEmit": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "module": "ESNext",
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "esnext",
-    "outDir": "./dist",
-    "baseUrl": "src",
-    "rootDir": "src",
-    "strictNullChecks": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": false
-  },
-  "include": ["src", "index.d.ts"],
-  "ts-node": {
-    "esm": true,
-    "include": ["index.ts"],
-    "experimentalSpecifierResolution": "node"
-  }
+    "compilerOptions": {
+        "downlevelIteration": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "isolatedModules": true,
+        "lib": ["dom", "esnext"],
+        "module": "esnext",
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "sourceMap": true,
+        "strict": true,
+        "useUnknownInCatchVariables": false,
+        "target": "es2020"
+    },
+    "include": ["src/**/*"]
 }
